...
            icon="scan"
            variant="secondary"
            to="scan-assets"
            disabled={manageAssetsButtonDisabled}
            className="flex-1"
          >
            Scan
          </Button>
          <Button
            to={manageAssetsUrl}
            className="flex-1 whitespace-nowrap"
            disabled={manageAssetsButtonDisabled}
          >
...
