...
          <span className="text-sm text-gray-500">Booking duration</span>
          <span className="text-right font-medium">{duration}</span>
        </div>

        <Separator />
        <div className="flex items-center justify-between">
          <span className="text-sm text-gray-500">Assets</span>
          <span className="text-right font-medium">{assetsCount}</span>
        </div>
        {partialCheckinProgress?.hasPartialCheckins && (
          <>
            <Separator />
            <div className="flex flex-col gap-2">
...
