...
          <>
            <Th>Message</Th>
            <When truthy={!isAssetReminderPage}>
              <Td>Asset</Td>
            </When>
            <Th>Alert Date</Th>
            <Th>Status</Th>
            <Th>Users</Th>
          </>
        }
        extraItemComponentProps={{ isAssetReminderPage }}
      />

...
