...
 *
 * @example
 * <InlineEntityCreationDialog
 *   title="Create Location"
 *   buttonLabel="+ New Location"
 *   type="location"
 *   onCreated={(data) => console.log('Created:', data)}
 * />
 */
export default function InlineEntityCreationDialog({
  title,
  buttonLabel,
  type,
...
